# python-check-updates

./: .codecov.yml  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  SECURITY.md  install.ps1  install.sh
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  main.rs  self_update.rs  uninstall.rs  upgrade.rs
src/output/: json.rs  table.rs
src/parsers/: mod.rs  poetry.rs  pyproject.rs  requirements.rs
src/pypi/: client.rs  models.rs
src/version/: compare.rs  constraint.rs  mod.rs
tests/fixtures/: poetry_pyproject.toml  requirements.txt  uv_dependency_groups_pyproject.toml  uv_pyproject.toml
