[package]
name = "pycu"
version = "1.1.2"
edition = "2024"
rust-version = "1.85"
description = "Check your Python dependencies for newer versions on PyPI"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Logic-py/python-check-updates"
homepage = "https://github.com/Logic-py/python-check-updates"
documentation = "https://docs.rs/pycu"
readme = "README.md"
keywords = ["python", "dependencies", "pypi", "update", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "pycu"
path = "src/main.rs"

[dependencies]
anyhow = "1"
dirs = "6"
clap = { version = "4", features = ["derive"] }
flate2 = "1"
futures = "0.3"
indicatif = "0.18.4"
owo-colors = "4"
pep440_rs = "0"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tar = "0.4"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
toml = "1"
zip = { version = "8.2.0", default-features = false, features = ["deflate"] }

[dev-dependencies]
tempfile = "3"
wiremock = "0.6"
